[package]
name = "tontoo-data"
version = "0.1.0"
edition = "2021"
authors = ["arlomu"]
description = "Data storage library for TontooOS with macOS-style sandboxing and system hooks"
license = "MIT"
repository = "https://github.com/arlomu/TontooData"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
thiserror = "1"
rusqlite = { version = "0.30", features = ["bundled"] }
walkdir = "2"
aes-gcm = { version = "0.10", optional = true }
blake3 = { version = "1.5", optional = true }

[features]
default = []
encryption = ["aes-gcm", "blake3"]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"